@@ -20,7 +20,7 @@ provider-name="Gujal">
 </addon>
 
 <addon id="plugin.video.deccandelight"
-version="1.1.7"
+version="1.1.8"
 name="Deccan Delight"
 provider-name="Gujal">
 <requires>
@@ -39,7 +39,7 @@ provider-name="Gujal">
 	<platform>all</platform>
 	<website>https://forums.tvaddons.ag/addon-releases/49105-deccan-delight-indian-entertainment.html</website>
 	<disclaimer>This addon scrapes content from various websites around the Internet and is not liable for any content hosted on those sites</disclaimer>
-	<news>[B]Updated 1 Apr 2017[/B]</news>
+	<news>[B]Updated 18 Apr 2017[/B]</news>
 </extension>
 </addon>
 
