@@ -23,7 +23,7 @@ import HTMLParser
 class mersal(Scraper):
     def __init__(self):
         Scraper.__init__(self)
-        self.bu = 'http://mersalaayitten.net/videos?c='
+        self.bu = 'http://mersalaayitten.org/videos?c='
         self.icon = self.ipath + 'mersal.png'
         self.hdstr = self.settings('mersalhd')
         self.list = {'01Tamil Movies': self.bu + '1&o=mr',
@@ -85,19 +85,16 @@ class mersal(Scraper):
         r = requests.get(url, headers=headers)
         link = r.text
         cookies = r.cookies
-        avs = cookies['AVS']
         xmlurl = re.findall('config=(.*?)"', link)[0]
-        headers['Referer'] = '%smedia/nuevo/player.swf?config=%s'%(self.bu[:-9],xmlurl)
+        headers['Referer'] = url
 
-        r = requests.get(xmlurl, headers=headers, cookies=cookies)
-        link = r.text
-
+        link = requests.get(xmlurl, headers=headers, cookies=cookies).text
         soup = BeautifulSoup(link)
-
-        stream_url = soup.file.text + '|Cookie=AVS=%s'%avs
+        ua = 'Mozilla/5.0 (Windows; U; Windows NT 5.1; en-GB; rv:1.9.0.3) Gecko/2008092417 Firefox/3.0.3'
+        stream_url = soup.file.text + '|Referer=%s&User-Agent=%s'%(url,ua)
         if self.hdstr == 'true':
             try:
-                stream_url = soup.filehd.text + '|Cookie=AVS=%s'%avs
+                stream_url = soup.filehd.text + '|Referer=%s&User-Agent=%s'%(url,ua)
             except:
                 pass
         
