@@ -23,16 +23,15 @@ import HTMLParser
 class moviefk(Scraper):
     def __init__(self):
         Scraper.__init__(self)
-        self.bu = 'http://www.moviefk.net/category/'
+        self.bu = 'http://moviefka.net/category/'
         self.icon = self.ipath + 'moviefk.png'
         self.list = {'01Tamil Movies': self.bu + 'tamil-movies/',
                      '02Telugu Movies': self.bu + 'telugu-movies/',
                      '03Hindi Movies': self.bu + 'hindi-movies/',
                      '04English Movies': self.bu + 'hollywood-movies/',
-                     '05Hindi Dubbed Movies': self.bu + 'hindi-dubbed/',
+                     '05Hindi Dubbed Movies': self.bu + 'hindi-dubbed-movies/',
                      '06Punjabi Movies': self.bu + 'punjabi-movies/',
-                     '07Marathi Movies': self.bu + 'marathi-movie/',
-                     '08WWE Events': self.bu + 'wwe/',
+                     '07Urdu Movies': self.bu + 'pakistani-movies/',
                      '09[COLOR yellow]** Search **[/COLOR]': self.bu[:-9] + '?s='}
              
     def get_menu(self):
@@ -47,29 +46,30 @@ class moviefk(Scraper):
             url = url + search_text
 
         html = requests.get(url, headers=self.hdr).text
-        mlink = SoupStrainer('ul', {'class':'listing-videos listing-tube'})
+        mlink = SoupStrainer('div', {'id':'archive'})
         mdiv = BeautifulSoup(html, parseOnlyThese=mlink)
-        plink = SoupStrainer('div', {'class':'pagination'})
+        plink = SoupStrainer('div', {'class':'navigation'})
         Paginator = BeautifulSoup(html, parseOnlyThese=plink)
         items = mdiv.findAll('li')
         
         for item in items:
-            title = h.unescape(item.text)
-            title = self.clean_title(title)
-            url = item.find('a')['href']
-            try:
-                thumb = item.find('img')['src']
-            except:
-                thumb = self.icon
-            movies.append((title, thumb, url))
+            if 'postcontent' in str(item):
+                title = h.unescape(item.h2.text)
+                title = self.clean_title(title)
+                url = item.find('a')['href']
+                try:
+                    thumb = item.find('img')['src']
+                except:
+                    thumb = self.icon
+                movies.append((title, thumb, url))
         
-        if 'Next' in str(Paginator):
-            pages = Paginator.findAll('a')
-            for page in pages:
-                if 'Next' in str(page):
-                    purl = page.get('href')
-            pgtxt = Paginator.span.text
-            title = 'Next Page.. (Currently in %s)' % pgtxt
+        if 'next' in str(Paginator):
+            currpg = Paginator.find('span', {'class':re.compile('current')}).text
+            nlink = Paginator.find('a', {'class':re.compile('^next')})
+            purl = nlink.get('href')
+            pages = Paginator.findAll('a', {'class':'page-numbers'})
+            lastpg = pages[len(pages)-1].text
+            title = 'Next Page.. (Currently in Page %s of %s)' % (currpg,lastpg)
             movies.append((title, self.nicon, purl))
         
         return (movies,8)
@@ -78,9 +78,9 @@ class moviefk(Scraper):
         videos = []
             
         html = requests.get(url, headers=self.hdr).text
-        mlink = SoupStrainer('div', {'class':'video-embed'})
+        mlink = SoupStrainer('div', {'class':'entry'})
         videoclass = BeautifulSoup(html, parseOnlyThese=mlink)
-        links = videoclass.findAll('a')
+        links = videoclass.findAll('a', {'title':re.compile('.')})
 
         for link in links:
             try:
