@@ -1,3 +1,9 @@
+[B]Version 1.1.8 - 18 Apr 2017[/B]
+- Mersalaayitten Fix
+- Desitashan new source
+- MovieFK fix
+- Tamilgun fix
+
 [B]Version 1.1.7 - 1 Apr 2017[/B]
 - Mersalaayitten Fix
 
